# dblect

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  questions_and_decisions.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  dblect-overview.md  dblect_technical_intro.md  demo_walkthrough.md  design-concepts-digest.md  flags_and_configs_as_types.md  tiers_and_rough_implementation_order.md
docs/current_state/: architecture.md  calibration.md  capabilities.md  incremental-worlds.md
docs/design/: column-level-lineage.md  conditional-uniqueness-facts.md  config-and-flag-worlds.md  contract-directed-generation.md  contract-library.md  contracts-from-lineage-facts.md  cross-model-contracts.md  dblect_technical_intro.md  declaration-dsl.md  demo_walkthrough.md  design-concepts-digest.md  domain-type-algebra.md  domain-type-functions.md  domain-type-maybe.md  domain-type-substrate-readiness.md  dsl-reference.md  flag-worlds-implementation-plan.md  flags_and_configs_as_types.md  functional-dependencies.md  hazard-algebra.md  incremental-worlds.md  intent-supplying-contracts.md  lineage-facts-types.md  lineage-facts.md  nullability-hazards.md  propagation-soundness.md  refutation-and-verdicts.md  semantic-type-algebra.md  semantic-type-substrate-readiness.md  semantic-types-layer.md  shared-reference-resolution.md  tiers_and_rough_implementation_order.md  udf-and-opaque-operators.md  var-inference-spec.md  window-propagation.md
docs/design/research/: dbt-config-patterns.md  variational-analysis-literature.md
docs/design/var-inference/: discovery-inputs.md  inference-and-classification.md  jinja-frontend.md  macro-following.md  plan.md  scaffold-and-cli.md
scripts/: refresh_bigquery_fixtures.sh  refresh_jaffle_fixtures.sh  refresh_scenarios.sh  refresh_snapshot_audit.sh
src/dblect/: __init__.py  adapters.py  analysis.py  baseline.py  diff_filter.py  loader.py  report.py  sarif.py  severity.py  templating.py
src/dblect/adapters/: __init__.py  model.py  registry.py
src/dblect/audit/: __init__.py  incremental.py  reporter.py  sourcemap.py  suppress.py  walker.py
src/dblect/bootstrap/: __init__.py  skill.md
src/dblect/check/: __init__.py  coverage.py  findings.py  flags.py  incremental.py  report.py  run.py  worlds.py
src/dblect/cli/: __init__.py
src/dblect/contracts/: __init__.py  ast.py  compile.py  decorator.py  proxy.py  stubs.py
src/dblect/demo/: __init__.py  enums.py  library.py
src/dblect/execution/: __init__.py  incremental.py  project_env.py  run.py
src/dblect/flatten/: __init__.py  detector.py
src/dblect/lineage/: __init__.py  builder.py  graph.py  predicate.py  property.py  semiring.py
src/dblect/manifest/: __init__.py  catalog.py  dag.py  parse.py
src/dblect/nullability/: __init__.py  detector.py
src/dblect/snapshot/: __init__.py  detector.py
src/dblect/sql/: __init__.py  _sqlglot.py  aggregates.py  compat.py  (+7 more)
tests/: conftest.py  test_adapters.py  test_analysis.py  test_baseline.py  test_diff_filter.py  test_fail_threshold.py  test_packaging.py  test_report.py  test_sarif.py  test_severity.py  test_smoke.py  test_templating.py
tests/audit/: test_fanout_fd_grounding.py  test_incremental.py  test_nullable_key_fd_grounding.py  test_reporter.py  test_sourcemap.py  test_suppress.py  test_walker.py
tests/bootstrap/: test_skill_drift.py
tests/check/: conftest.py  test_compilation_coverage.py  test_cross_world.py  test_flags.py  test_incremental_check.py  test_report.py  test_run_check.py  test_world_staging.py  test_worlds.py
tests/cli/: _output.py  test_audit.py  test_check.py  test_check_baseline.py  test_check_diff.py  test_init_and_check.py  test_setup.py
tests/contracts/: test_compile.py  test_contract_capture.py  test_pbt_contracts.py  test_proxy_builds_ast.py  test_stubs.py
tests/execution/: test_incremental.py  test_run.py
tests/flatten/: test_detector.py
tests/lineage/: _duckdb_oracle.py  _lattice_laws.py  conftest.py  test_array_nonemptiness_propagation.py  test_cardinality_cross_model.py  test_conditional_activation.py  test_config_facts.py  test_demo_aggregation_depth.py  test_demo_nullability.py  test_domain_type_coherence.py  test_domain_type_join_keys.py  test_domain_type_lattice.py  test_domain_type_outer_join.py  test_domain_type_propagation.py  test_facts_grounding.py  test_facts_lattice.py  test_facts_property.py  test_facts_registry.py  test_fanout_grain.py  test_functional_dependency_lattice.py  test_functional_dependency_propagation.py  test_nested_and_unnest.py  test_nullability_activation.py  test_nullability_facts.py  test_nullability_outer_join.py  test_pbt_domain_type_soundness.py  test_pbt_functional_dependency_soundness.py  test_pbt_lineage.py  test_pbt_nullability_monotone.py  test_pbt_nullability_soundness.py  test_pbt_uniqueness.py  test_pbt_uniqueness_soundness.py  test_predicate_flow.py  test_predicate_implication.py  test_propagator.py  test_reference_resolution.py  test_resolution_coverage.py  test_schema_accumulation.py  test_semiring_laws.py  test_shared_tree_resolution.py  (+8 more)
tests/manifest/: test_catalog.py  test_compilation_status.py  test_dag.py  test_model_config.py  test_parse.py
tests/nullability/: test_detector.py
tests/scenarios/: test_scenarios.py
tests/snapshot/: test_snapshot_temporal_filter.py
tests/sql/: test_aggregates.py  test_anti_join.py  test_compat.py  test_dialects.py  test_jaffle.py  test_parse.py  test_patterns.py  test_pbt_structural_hazards.py  test_result_statement.py  test_snapshot_temporal_filter.py  test_suppression_hint.py  test_vocab.py
tests/types/: conftest.py  test_contract_aggregation_e2e.py  test_contract_bridge.py  test_contract_integration.py  test_contract_methods.py  test_contract_registration.py  test_domain_type_declaration.py  test_foreign_key_edges.py  test_loader.py  test_pbt_declaration_equivalence.py
tests/uniqueness/: test_cross_model_fanout.py  test_detector.py  test_facts.py  test_propagation.py
tests/varinf/: test_environment.py  test_op_vocabulary.py  test_walker.py  test_walker_properties.py
(+81 files in other folders)
