[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dblect"
description = "Semantic correctness framework for dbt analytics pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Dmitriy Ryaboy" }]
keywords = ["dbt", "analytics", "data-quality", "property-based-testing", "type-system"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "sqlglot>=25.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "hypothesis>=6.100",
    "duckdb>=1.0",
    "dbt-artifacts-parser>=0.8",
]

[project.optional-dependencies]
dbt-core = ["dbt-core>=1.8"]

[project.scripts]
dblect = "dblect.cli:app"

[project.urls]
Homepage = "https://github.com/dvryaboy/dblect"
Documentation = "https://github.com/dvryaboy/dblect/tree/main/docs"
Issues = "https://github.com/dvryaboy/dblect/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
]

[tool.hatch.version]
path = "src/dblect/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dblect"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "PT",     # flake8-pytest-style
    "TID",    # flake8-tidy-imports
    "PIE",    # flake8-pie
    "PERF",   # perflint
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]  # test function names

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
# dbt-artifacts-parser doesn't ship type stubs; warn rather than error.

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "error",
    # Hypothesis emits non-actionable deprecations from time to time; widen if needed.
]

[tool.coverage.run]
branch = true
source = ["src/dblect"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
