[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dblect"
description = "Semantic correctness framework for dbt analytics pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Dmitriy Ryaboy" }]
keywords = ["dbt", "analytics", "data-quality", "property-based-testing", "type-system"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "sqlglot>=25.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "hypothesis>=6.100",
    "duckdb>=1.0",
    "dbt-artifacts-parser>=0.8",
]

[project.optional-dependencies]
# Capped below 1.11.8: dbt 1.11.8 adds a macro `config` block that
# dbt-artifacts-parser 0.13.2 rejects as an extra field (it needs a ManifestV13).
# The earlier `function`-materialization `javascript` language (dbt 1.9+) is a
# value the parser also does not model, handled by a tolerant read in
# dblect.manifest.parse rather than a cap. Lift this cap when a parser release
# lands. Tracked in #106; upstream https://github.com/yu-iskw/dbt-artifacts-parser/issues/219.
dbt-core = ["dbt-core>=1.8,<1.11.8"]

[project.scripts]
dblect = "dblect.cli:app"

[project.urls]
Homepage = "https://github.com/dvryaboy/dblect"
Documentation = "https://github.com/dvryaboy/dblect/tree/main/docs"
Issues = "https://github.com/dvryaboy/dblect/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
    # Validates the SARIF reporter output against the vendored SARIF 2.1.0 schema.
    "jsonschema>=4.0",
    # See the cap rationale under [project.optional-dependencies] (parser #219).
    "dbt-core>=1.8,<1.11.8",
    "dbt-duckdb>=1.8",
    "pytest-xdist>=3.6",
]
# Maintainer-only: regenerates the committed warehouse fixtures (e.g.
# scripts/refresh_bigquery_fixtures.sh). Deliberately NOT a runtime or user
# dependency and NOT in `dev` — dblect analyses a committed manifest and never
# talks to a warehouse, so a warehouse adapter is needed only to refresh fixtures.
# Sync it on its own (`uv sync --group warehouse-fixtures`), not alongside `dev`.
warehouse-fixtures = [
    "dbt-bigquery>=1.9,<2.0",
]

[tool.hatch.version]
path = "src/dblect/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dblect"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "PT",     # flake8-pytest-style
    "TID",    # flake8-tidy-imports
    "PIE",    # flake8-pie
    "PERF",   # perflint
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]  # test function names

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
# The scenario fixtures' dblect/ packages are user-style declaration files (typed
# `amount: Money.columns(...)`, contract methods over a `self` proxy). They are
# illustrative inputs, not library code, and exercising them is the scenario test's
# job; static-checking them as library code is not meaningful. (Typed authoring of
# contract bodies is the generated-stubs concern; see issue #76 for the related gap.)
exclude = ["**/node_modules", "**/__pycache__", "tests/fixtures/scenarios"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
# dbt-artifacts-parser doesn't ship type stubs; warn rather than error.

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "error",
    # Hypothesis emits non-actionable deprecations from time to time; widen if needed.
]

[tool.coverage.run]
branch = true
source = ["src/dblect"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
